cambios agregamos esta es la prueba de mi primer repositorio

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Esto es una prueba</h1>
-    <p>Hola</p>
+    <p>Hola, esta es la prueba de mi primer repositorio</p>
 </body>
 </html>
